# dental-lab-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  lint_and_test.yaml  test.yaml
accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  singleton.py  urls.py  utils.py  views.py
accounts/fixtures/: dental_lab_data.json  test_data.json  users.json
accounts/reports/: acceptance_report.py  invoice_for_payment.py  order_report.py  report.py
accounts/services/: user_service.py
accounts/tests/: base_testcase.py  test_customers.py  test_login.py  test_profile.py  test_registration.py  test_technicians.py
api/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
api/admin/: base_model_admin.py  general.py  groups.py  product_types.py  sites.py  statuses.py
api/fixtures/: operation_and_product_types.json  statuses.json  test_data_statuses.json
api/services/: operation_service.py  order_service.py  product_service.py
api/tests/: test_operations.py  test_orders.py  test_triggers.py
app/: settings.py  urls.py  views.py
app/admin/: __init__.py
backend/: .env.example  Dockerfile  manage.py  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/: admin.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
backend/app/: settings.py  urls.py
core/: admin.py  models.py  paginations.py  serializers.py
core/fixtures/: object_types.json  statuses.json
core/tests/: __init__.py  base_testcase.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  App.jsx  index.js
operations/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
operations/tests/: test_operations.py
orders/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
orders/admin/: __init__.py  general.py  product_types.py  sites.py  statuses.py
orders/fixtures/: groups_data.json  operation_and_product_types.json  statuses.json  test_data_customers.json  test_data_statuses.json
orders/reports/: __init__.py  acceptance_report.py  invoice_for_payment.py  order_report.py  report.py
products/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
works/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
(+102 files in other folders)
