[project]
name = "dental-lab"
version = "0.1.0"
description = "Dental Lab Backend API"
requires-python = ">=3.11"

dependencies = [
    # Core
    "Django==5.0.1",
    "gunicorn>=22,<24",

    # Django REST
    "djangorestframework>=3.15,<4.0",
    "django-cors-headers>=4.3,<5.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "drf-spectacular>=0.27,<1.0",
    "drf-spectacular-sidecar>=2024.4",
    "djangorestframework-camel-case>=1.4,<2.0",

    # Auth
    "drfpasswordless>=1.5,<2.0",
    "django-rest-auth>=0.9",

    # Database
    "psycopg2-binary>=2.9",

    # History / Triggers
    "django-pghistory>=3.1,<4.0",
    "django-pgtrigger>=4.11,<5.0",

    # Utilities
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "fpdf2>=2.7",
    "python-docx>=1.1",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "pytz>=2024.2",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "django-debug-toolbar>=4.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
